[-] FO : Bug #PSCSX-1216, Change z-index for promo

--- a/themes/default-bootstrap/sass/product.scss
+++ b/themes/default-bootstrap/sass/product.scss
@@ -106,7 +106,7 @@ img{
 		}
 		.new-box,
 		.sale-box {
-			z-index: 50002
+			z-index: 5002
 		}
 	}
 }
